--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ github_username: littlejanee # your GitHub user name
 gitlab_username: # your GitLab user name
 x_username: janee424 # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: # your LinkedIn user name
+linkedin_username: janee424 # your LinkedIn user name
 telegram_username: # your Telegram user name
 scholar_userid: bWaxNKEAAAAJ # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
