--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: littlejanee # your GitHub user name
 gitlab_username: # your GitLab user name
 x_username: janee424 # your X handle
+bluesky_username: littlejanee
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: janee424 # your LinkedIn user name
 telegram_username: # your Telegram user name
