add chinese name

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: jane l. e (鄂小简) # the website title (if blank, full name will be used instead)
 first_name: jane
 middle_name: l.
 last_name: e
